--- a/TodoListApp/TodoListApp.Presentation/Views/Auth/Register.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Auth/Register.cshtml
@@ -1,31 +1,31 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Register";
+    Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <h2><strong>Register Page</strong></h2><br />
-                <form asp-action="Register" method="post">
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
-                    </div>
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label>Confirm Password</label>
-                        <input type="password" class="form-control" name="confirmedPassword" id="confirmPassword" placeholder="Confirm password">
-                    </div>
-                    <div class="form-check">
-                        <button class="btn btn-info" type="reset">Reset</button>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <h2><strong>Register Page</strong></h2><br />
+            <form asp-action="Register" method="post">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label>Confirm Password</label>
+                    <input type="password" class="form-control" name="confirmedPassword" id="confirmPassword" placeholder="Confirm password">
+                </div>
+                <div class="form-check">
+                    <button class="btn btn-info" type="reset">Reset</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 
