--- a/TodoListApp/TodoListApp.Presentation/Views/Auth/Profile.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Auth/Profile.cshtml
@@ -1,6 +1,35 @@
-﻿@{
+﻿@model TodoListApp.Application.Users.DTO.ProfileDto
+
+@{
     ViewData["Title"] = "Profile";
 }
 
 <h1>Profile</h1>
 
+<div>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UserId)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UserId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Points)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Points)
+        </dd>
+    </dl>
+</div>
+<div>
+    @*@Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a asp-action="Index">Back to List</a>*@
+</div>
