--- a/TodoListApp/TodoListApp.Presentation/Views/Shared/LoginInfoPartial.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Shared/LoginInfoPartial.cshtml
@@ -1,6 +1,14 @@
-﻿<ul class="navbar-nav">
+﻿@using System.Security.Claims;
+@{ 
+    var email = Context.User.Claims.Where(x => x.Type == ClaimTypes.Email).First().Value;
+    var userId = Context.User.Claims.Where(x => x.Type == "Id").First().Value;
+}
+
+<ul class="navbar-nav">
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-controller="Auth" asp-action="Profile">NAZWA</a>
+        <a class="nav-link text-dark" asp-controller="Auth" asp-action="Profile" asp-route-id="@userId">
+            @email
+        </a>
     </li>
     <li class="nav-item">
         <form asp-controller="Auth" asp-action="Logout">
