--- a/TodoListApp/TodoListApp.Presentation/Views/Auth/Register.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Auth/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
+    @model TodoListApp.Application.Users.Commands.RegisterUserCommand;
 }
 
 <div class="container">
@@ -10,13 +11,16 @@
     <div class="bg-light text-center d-flex justify-content-center p-2">
         <form asp-action="Register" method="post">
             <div class="form-group">
-                <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
+                <input asp-for="Email" type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                <input asp-for="Password" type="password" class="form-control" name="password" id="password" placeholder="Password">
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" name="confirmedPassword" id="confirmPassword" placeholder="Confirm password">
+                <input asp-for="ConfirmedPassword" type="password" class="form-control" name="confirmedPassword" id="confirmPassword" placeholder="Confirm password">
+                <span asp-validation-for="ConfirmedPassword" class="text-danger"></span>
             </div>
             <div>
                 <button class="btn btn-primary" type="submit">Register</button>
