--- a/TodoListApp/TodoListApp.Presentation/Views/Home/Index.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿@model TodoListApp.Application.Users.DTO.MainPanelDto
+@{
     ViewData["Title"] = "Home Page";
 }
-
+S
 <div class="container">
     
     <div class="row">
