--- a/TodoListApp/TodoListApp.Presentation/Views/Shared/_Layout.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TodoListApp</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="LoginInfoPartial.cshtml" />
+                    <partial name="PartialViews/LoginInfoPartial.cshtml" />
                 </div>
             </div>
         </nav>
