udpated main view (WIP)

--- a/TodoListApp/TodoListApp.Presentation/Views/Home/Index.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Home/Index.cshtml
@@ -26,12 +26,60 @@
 
             <hr />
             <form>
-                <button class="btn btn-dark" type="submit">New Category</button>
+                <button class="btn btn-dark list-group-item" type="submit">New Category</button>
             </form>
         </div>
 
         <div id="dynamicContent" class="col" style="border: 1px dotted red">
-           
+            <ul class="list-group">
+                @foreach (var task in Model.Tasks)
+                {
+                <li class="list-group-item bg-light mt-2">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <text>@task.TaskName</text>
+                        </div>
+                        <div class="col-sm">
+                            @{
+                                switch (task.Priority)
+                                {
+                                    case TodoListApp.Core.Domain.PriorityLevel.Low:
+                                        <i class="fas fa-2x fa-circle"></i>
+                                        <i class="far fa-2x fa-circle"></i>
+                                        <i class="far fa-2x fa-circle"></i>
+                                        break;
+                                    case TodoListApp.Core.Domain.PriorityLevel.Medium:
+                                        <i class="fas fa-2x fa-circle"></i>
+                                        <i class="fas fa-2x fa-circle"></i>
+                                        <i class="far fa-2x fa-circle"></i>
+                                        break;
+                                    <i class="fas fa-2x fa-circle"></i>
+                                    <i class="fas fa-2x fa-circle"></i>
+                                    <i class="fas fa-2x fa-circle"></i>
+                                    case TodoListApp.Core.Domain.PriorityLevel.High:
+                                        break;
+                                }
+                            }
+                        </div>
+                        <div class="col-sm text-center">
+                            @{
+                                if (task.PredictedBestBeforeDateExceeded)
+                                {
+                                    <i class="fas fa-2x fa-hourglass-end text-danger"></i>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-2x fa-hourglass-start text-success"></i>
+                                }
+                            }
+                        </div>
+                        <div class="col-sm justify-content-center">
+                            <button class="d-inline-block">Details</button>
+                        </div>
+                    </div>
+                </li>
+            }
+                </ul>
         </div>
 
     </div>
