--- a/TodoListApp/TodoListApp.Presentation/Views/Home/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Home/Tasks.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
-<ul class="list-group">
-    @*@foreach (var task in Model.Tasks)
+@*<ul class="list-group">
+    @foreach (var task in Model.Tasks)
     {
         <li class="list-group-item bg-dark">
             <div class="row">
@@ -9,5 +9,5 @@
             </div>
             <button class="d-inline-block">Details</button>
         </li>
-    }*@
-</ul>
+    }
+</ul>*@
