--- a/TodoListApp/TodoListApp.Presentation/Views/Home/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Home/Tasks.cshtml
@@ -1,13 +1,51 @@
-﻿@model string
+﻿@model List<TodoListApp.Application.Users.DTO.MainPanelTasksDto>
 
-@*<ul class="list-group">
-    @foreach (var task in Model.Tasks)
+<ul class="list-group">
+    @foreach (var task in Model)
     {
-        <li class="list-group-item bg-dark">
+        <li class="list-group-item bg-light mt-2">
             <div class="row">
-                <text>@task.TaskName</text>
+                <div class="col-sm-4">
+                    <text>@task.TaskName</text>
+                </div>
+                <div class="col-sm">
+                    @{
+                        switch (task.Priority)
+                        {
+                            case TodoListApp.Core.Domain.PriorityLevel.Low:
+                                <i class="fas fa-2x fa-circle"></i>
+                                <i class="far fa-2x fa-circle"></i>
+                                <i class="far fa-2x fa-circle"></i>
+                                break;
+                            case TodoListApp.Core.Domain.PriorityLevel.Medium:
+                                <i class="fas fa-2x fa-circle"></i>
+                                <i class="fas fa-2x fa-circle"></i>
+                                <i class="far fa-2x fa-circle"></i>
+                                break;
+                            <i class="fas fa-2x fa-circle"></i>
+                            <i class="fas fa-2x fa-circle"></i>
+                            <i class="fas fa-2x fa-circle"></i>
+                            case TodoListApp.Core.Domain.PriorityLevel.High:
+                                break;
+                        }
+                    }
+                </div>
+                <div class="col-sm text-center">
+                    @{
+                        if (task.PredictedBestBeforeDateExceeded)
+                        {
+                            <i class="fas fa-2x fa-hourglass-end text-danger"></i>
+                        }
+                        else
+                        {
+                            <i class="fas fa-2x fa-hourglass-start text-success"></i>
+                        }
+                    }
+                </div>
+                <div class="col-sm justify-content-center">
+                    <button class="btn btn-dark">Details</button>
+                </div>
             </div>
-            <button class="d-inline-block">Details</button>
         </li>
     }
-</ul>*@
+</ul>
