--- a/TodoListApp/TodoListApp.Presentation/Views/Home/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Home/Tasks.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<TodoListApp.Application.Users.DTO.MainPanelTasksDto>
+﻿@model TodoListApp.Application.Tasks.DTO.TasksCollectionDto
 
 <ul class="list-group">
-    @foreach (var task in Model)
+    @foreach (var task in Model.Tasks)
     {
         <li class="list-group-item bg-light mt-2">
             <div class="row">
