--- a/TodoListApp/TodoListApp.Presentation/Views/Home/Index.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
         </div>
 
         <div id="dynamicContent" class="col">
-            <partial name="Tasks" model="@Model.Tasks" />
+            <partial name="../Board/Tasks" model="@Model.Tasks" />
         </div>
 
     </div>
