changed namespace from Tasks to Boards

--- a/TodoListApp/TodoListApp.Presentation/Views/Board/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Board/Tasks.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<TodoListApp.Application.Tasks.DTO.MainPanelTasksDto>
+﻿@model List<TodoListApp.Application.Boards.DTO.MainPanelTasksDto>
 
 @if (!Model.Any())
 {
