--- a/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
@@ -25,13 +25,20 @@
             </dl>
         </div>
         <div class="col-7">
+            <div class="row">
+                <button type="button" class="btn btn-dark">Add Detail</button>
+            </div>
             <ul class="list-group">
+                @if (!Model.Details.Any())
+                {
+                    <span>There are no task details</span>
+                }
                 @foreach (var detail in Model.Details)
                 {
                     <li class="list-group-item bg-light mt-2">
                         <div class="row">
                             <div class="col-sm-1 border-right">
-                                <button type="button" id="dropdownDescription" 
+                                <button type="button" id="dropdownDescription"
                                         value="@detail.TaskDetailsId">
                                     <i class="fas fa-2x fa-angle-down"></i>
                                 </button>
