--- a/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<TodoListApp.Application.Boards.DTO.MainPanelTasksDto>
+﻿@model List<TodoListApp.Application.Tasks.DTO.TaskDto>
 
 @if (!Model.Any())
 {
