--- a/TodoListApp/TodoListApp.Presentation/Views/Auth/Register.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Auth/Register.cshtml
@@ -9,19 +9,28 @@
         <i class="fa fa-8x fa-user-circle"></i>
     </div>
     <div class="bg-light text-center d-flex justify-content-center p-2">
-        <form asp-action="Register" method="post">
-            <div class="form-group">
+        <form asp-action="Register" method="post" class="w-100">
+            <div class="form-group w-25 mx-auto">
                 <input asp-for="Email" type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
+            </div>
+            <div>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+     
+            <div class="form-group w-25 mx-auto">
                 <input asp-for="Password" type="password" class="form-control" name="password" id="password" placeholder="Password">
+            </div>
+            <div>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+
+            <div class="form-group w-25 mx-auto">
                 <input asp-for="ConfirmedPassword" type="password" class="form-control" name="confirmedPassword" id="confirmPassword" placeholder="Confirm password">
+            </div>
+            <div>
                 <span asp-validation-for="ConfirmedPassword" class="text-danger"></span>
             </div>
+
             <div>
                 <button class="btn btn-primary" type="submit">Register</button>
             </div>
