--- a/TodoListApp/TodoListApp.Presentation/Views/Shared/_Layout.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TodoListApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Board" asp-action="Index">TodoListApp</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="PartialViews/LoginInfoPartial.cshtml" />
                 </div>
@@ -27,7 +27,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - TodoListApp.Presentation - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - TodoListApp.Presentation - <a asp-area="" asp-controller="Board" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
