--- a/TodoListApp/TodoListApp.Presentation/Views/Auth/Login.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Auth/Login.cshtml
@@ -11,24 +11,24 @@
     <div class="bg-light text-center d-flex justify-content-center p-2">
         <form asp-action="login" method="post" class="w-100">
             <div class="form-group w-25 mx-auto">
-                <input asp-for="Email" type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
+                <input asp-for="Email" type="text" class="form-control" id="email" name="email" placeholder="Email">
             </div>
             <div>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
 
             <div class="form-group w-25 mx-auto">
-                <input asp-for="Password" type="Password" class="form-control" name="password" id="password" placeholder="Password">
+                <input asp-for="Password" type="Password" class="form-control" name="password" id="password" placeholder="Hasło">
             </div>
             <div>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <div>
-                <button class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-primary" type="submit">Zaloguj</button>
             </div>
             <div>
-                <a asp-area="" asp-controller="Auth" asp-action="Register">Register</a>
+                <a asp-area="" asp-controller="Auth" asp-action="Register">Zarejestruj</a>
             </div>
         </form>
     </div>
