--- a/TodoListApp/TodoListApp.Presentation/Views/Board/AddBoardPartial.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Board/AddBoardPartial.cshtml
@@ -21,8 +21,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-dark" data-save="modal">Save</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal">Zamknij</button>
+                <button type="button" class="btn btn-dark" data-save="modal">Zapisz</button>
             </div>
         </div>
     </div>
