--- a/TodoListApp/TodoListApp.Presentation/Views/Board/Index.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Board/Index.cshtml
@@ -10,11 +10,11 @@
         <div id="sideMenu" class="col-3">
             @if (!Model.Categories.Any())
             {
-                <span>There are no categories</span>
+                <span>Nie ma jeszcze żadnych kategorii</span>
             }
             else
             {
-                <ul class="list-group">
+                <ul class="list-group overflow-auto h-75">
                     @foreach (var category in Model.Categories)
                     {
                         <li class="d-flex d-block mt-2 shadow rounded">
@@ -28,7 +28,7 @@
             <div class="d-flex justify-content-center">
                 <button class="btn btn-dark" type="button" data-toggle="ajax-modal"
                         data-url="@Url.Action("AddBoard")">
-                    New Category
+                    Nowa kategoria
                 </button>
             </div>   
         </div>
