--- a/TodoListApp/TodoListApp.Presentation/Views/Shared/PartialViews/LoginInfoPartial.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Shared/PartialViews/LoginInfoPartial.cshtml
@@ -11,7 +11,7 @@
     </li>
     <li class="nav-item">
         <form asp-controller="Auth" asp-action="Logout">
-            <button class="btn btn-link text-dark" type="submit">Logout</button>
+            <button class="btn btn-link text-dark" type="submit">Wyloguj</button>
         </form>
     </li>
 </ul>
