--- a/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
@@ -26,12 +26,12 @@
         </div>
         <div class="col-7">
             <div class="row">
-                <button type="button" class="btn btn-dark">Add Detail</button>
+                <button type="button" class="btn btn-dark">Dodaj etap</button>
             </div>
             <ul class="list-group">
                 @if (!Model.Details.Any())
                 {
-                    <span>There are no task details</span>
+                    <span>Zadanie nie posiada żadnych etapów</span>
                 }
                 @foreach (var detail in Model.Details)
                 {
@@ -49,11 +49,11 @@
                             <div class="col-sm-2">
                                 @if (detail.Done)
                                 {
-                                    <span class="text-info">Done</span>
+                                    <span class="text-info">Gotowe</span>
                                 }
                                 else
                                 {
-                                    <span class="text-danger">Not done</span>
+                                    <span class="text-danger">Niegotowe</span>
                                 }
                             </div>
                         </div>
