--- a/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
@@ -2,7 +2,7 @@
 
 @if (!Model.Any())
 {
-    <h1>Tasks list is empty</h1>
+    <h1>Lista zadań jest pusta</h1>
 }
 <ul class="list-group">
     @foreach (var task in Model)
