--- a/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
@@ -1,11 +1,17 @@
-﻿@model List<TodoListApp.Application.Tasks.DTO.TaskDto>
+﻿@model TodoListApp.Application.Tasks.ViewModels.TasksViewModel
 
-@if (!Model.Any())
+<div class="row">
+    <div>
+        <a class="btn btn-dark" asp-action="AddTask" asp-controller="Task"
+           asp-route-boardId="@Model.BoardId">Dodaj Zadanie</a>
+    </div>
+</div>
+@if (!Model.Tasks.Any())
 {
     <h1>Lista zadań jest pusta</h1>
 }
 <ul class="list-group">
-    @foreach (var task in Model)
+    @foreach (var task in Model.Tasks)
     {
         <li class="list-group-item bg-light mt-2">
             <div class="row">
@@ -55,4 +61,3 @@
         </li>
     }
 </ul>
-
