--- a/TodoListApp/TodoListApp.Presentation/Views/Task/AddTask.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/AddTask.cshtml
@@ -12,23 +12,22 @@
         <form asp-action="AddTask" asp-route-boardId="@Context.Request.Query["boardId"]" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TaskName" class="control-label"></label>
+                <label asp-for="TaskName" class="control-label">Nazwa:</label>
                 <input asp-for="TaskName" class="form-control" />
                 <span asp-validation-for="TaskName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PredictedFinishDate" class="control-label"></label>
-                <input asp-for="PredictedFinishDate" class="form-control" />
+                <label asp-for="PredictedFinishDate" class="control-label">Przewidywana data ukończenia zadania:</label>
+                <input type="datetime" asp-for="PredictedFinishDate" class="form-control" />
                 <span asp-validation-for="PredictedFinishDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Priority" class="control-label"></label>
-                <input asp-for="Priority" class="form-control" />
+                <label asp-for="Priority" class="control-label">Priorytet:</label>
+                <select asp-for="Priority">
+                    <option value=@TodoListApp.Core.Domain.PriorityLevel.Low>Niski</option>
+                    <option value=@TodoListApp.Core.Domain.PriorityLevel.Medium>Średni</option>
+                    <option value=@TodoListApp.Core.Domain.PriorityLevel.High>Wysoki</option>
+                </select>
                 <span asp-validation-for="Priority" class="text-danger"></span>
             </div>
             <div class="form-group">
