--- a/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
@@ -18,7 +18,7 @@
                 <div class="col-sm-4">
                     <text>@task.TaskName</text>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm-3">
                     @{
                         switch (task.Priority)
                         {
@@ -54,7 +54,12 @@
                 </div>
                 <div class="col-sm justify-content-center">
                     <form asp-controller="Task" asp-action="TaskDetails" asp-route-id="@task.SingleTaskId" method="get">
-                        <button class="btn btn-dark" type="submit">Details</button>
+                        <button class="btn btn-dark" type="submit">Szczegóły</button>
+                    </form>
+                </div>
+                <div class="col-sm justify-content-center">
+                    <form asp-controller="Task" asp-action="Delete" asp-route-taskId="@task.SingleTaskId" method="post">
+                        <button class="btn btn-dark" type="submit">Usuń</button>
                     </form>
                 </div>
             </div>
