--- a/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/Tasks.cshtml
@@ -32,10 +32,10 @@
                                 <i class="fas fa-2x fa-circle"></i>
                                 <i class="far fa-2x fa-circle"></i>
                                 break;
-                            <i class="fas fa-2x fa-circle"></i>
-                            <i class="fas fa-2x fa-circle"></i>
-                            <i class="fas fa-2x fa-circle"></i>
                             case TodoListApp.Core.Domain.PriorityLevel.High:
+                                <i class="fas fa-2x fa-circle"></i>
+                                <i class="fas fa-2x fa-circle"></i>
+                                <i class="fas fa-2x fa-circle"></i>
                                 break;
                         }
                     }
@@ -58,7 +58,9 @@
                     </form>
                 </div>
                 <div class="col-sm justify-content-center">
-                    <form asp-controller="Task" asp-action="Delete" asp-route-taskId="@task.SingleTaskId" method="post">
+                    <form asp-controller="Task" asp-action="Delete" method="post">
+                        <input type="hidden" name="BoardId" value="@Model.BoardId" />
+                        <input type="hidden" name="TaskId" value="@task.SingleTaskId" />
                         <button class="btn btn-dark" type="submit">Usuń</button>
                     </form>
                 </div>
