reorganzation dtos and viewModels

--- a/TodoListApp/TodoListApp.Presentation/Views/Auth/Profile.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Auth/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model TodoListApp.Application.Users.DTO.ProfileDto
+﻿@model TodoListApp.Application.Users.ViewModels.ProfileViewModel
 
 @{
     ViewData["Title"] = "Profile";
