--- a/TodoListApp/TodoListApp.Presentation/Views/Board/Index.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Board/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model TodoListApp.Application.Boards.DTO.BoardDto
+﻿@model TodoListApp.Application.Boards.ViewModels.BoardViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
