--- a/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model TodoListApp.Application.Tasks.DTO.TaskInfoWithDetailsDto
+﻿@model TodoListApp.Application.Tasks.ViewModels.TaskInfoWithDetailsViewModel
 
 <div class="container">
     <div class="row">
