--- a/TodoListApp/TodoListApp.Presentation/Views/Board/Index.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Board/Index.cshtml
@@ -18,7 +18,11 @@
                     @foreach (var category in Model.Categories)
                     {
                         <li class="d-flex d-block mt-2 shadow rounded">
-                            <a class="btn btn-light w-100 h-100" boardId="@category.Key" asp-action="Index" asp-route-boardId="@category.Key">@category.Value</a>             
+                            <a class="btn btn-light w-100 h-100" boardId="@category.Key" asp-action="Index" asp-route-boardId="@category.Key">@category.Value</a>
+                            <form method="post" asp-action="RemoveBoard">
+                                <input type="hidden" name="BoardId" value="@category.Key" />
+                                <input type="submit" value="X" class="btn btn-light" />
+                            </form>
                         </li>
                     }
                 </ul>
