--- a/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
+++ b/TodoListApp/TodoListApp.Presentation/Views/Task/TaskDetails.cshtml
@@ -25,8 +25,11 @@
             </dl>
         </div>
         <div class="col-7">
-            <div class="row">
-                <button type="button" class="btn btn-dark">Dodaj etap</button>
+            <div class="row d-flex justify-content-center">
+                <button type="button" class="btn btn-dark" data-toggle="ajax-modal"
+                        data-url="@Url.Action("AddTaskDetails", new { taskId = Model.SingleTaskId })">
+                    Dodaj etap
+                </button>
             </div>
             <ul class="list-group">
                 @if (!Model.Details.Any())
@@ -38,7 +41,7 @@
                     <li class="list-group-item bg-light mt-2">
                         <div class="row">
                             <div class="col-sm-1 border-right">
-                                <button type="button" id="dropdownDescription"
+                                <button type="button" class="dropdownDescription"
                                         value="@detail.TaskDetailsId">
                                     <i class="fas fa-2x fa-angle-down"></i>
                                 </button>
@@ -66,5 +69,5 @@
             </ul>
         </div>
     </div>
-
+    <div id="dynamicContentForAddingBoardModal"></div>
 </div>
